Testes unitarios do estoqueService